[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["EKA <eka@limantis.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
